--- a/.env.example
+++ b/.env.example
@@ -7,8 +7,7 @@ NODE_ENV =
 ########################
 # DATABASE ENVIRONMENT
 ########################
-DB_HOST =
-DB_PORT =
-DB_USER =
-DB_PASSWORD =
-DB_NAME =
+MYSQL_HOST =
+MYSQL_USER =
+MYSQL_PASSWORD =
+MYSQL_DBNAME =
