--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "hpp": "^0.2.3",
     "http-status-codes": "^2.2.0",
     "morgan": "^1.10.0",
-    "pg": "^8.7.3",
+    "mysql2": "^2.3.3",
     "tsyringe": "^4.6.0",
     "typedi": "^0.10.0",
     "typeorm": "~0.2.34",
@@ -69,7 +69,6 @@
     "@types/http-status-codes": "^1.2.0",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.0.0",
-    "@types/pg": "^8.6.5",
     "@types/prettier": "^2.6.3",
     "@types/rimraf": "^3.0.2",
     "body-parser": "^1.20.0",
