--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "helmet": "^5.1.0",
     "hpp": "^0.2.3",
     "http-status-codes": "^2.2.0",
+    "jsonrepair": "^2.2.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "tsyringe": "^4.6.0",
