--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "typeorm:seeding": "npm run ts-bin ./node_modules/typeorm-seeding/dist/cli.js",
     "typeorm:cli": "npm run ts-bin ./node_modules/typeorm/cli.js",
     "cleanup": "rimraf dist",
-    "start": "node dist/main.js",
+    "start": "DEBUG=* node dist/main.js",
     "build": "npm run cleanup && npm run ts-bin:prod",
-    "dev": "npm run ts-bin:dev",
+    "dev": "DEBUG=* npm run ts-bin:dev",
     "seed:config": "npm run typeorm:seeding config",
     "seed:run": "cross-env NODE_ENV=development npm run ts-bin ./node_modules/typeorm-seeding/dist/cli.js seed",
     "seed:runrollmig": "npm run mig:rollback && npm run mig:latest && npm run seed:run",
