--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "cleanup": "rimraf dist",
     "start": "npm run mig:latest && node dist/main.js",
     "build": "npm run cleanup && npm run ts-bin:prod",
-    "dev": "DEBUG=* npm run ts-bin:dev",
+    "dev": "npm run ts-bin:dev",
     "seed:config": "npm run typeorm:seeding config",
     "seed:run": "npm run ts-bin ./node_modules/typeorm-seeding/dist/cli.js seed",
     "seed:runrollmig": "npm run mig:rollback && npm run mig:latest && npm run seed:run",
@@ -36,55 +36,53 @@
   },
   "license": "MIT",
   "engines": {
-    "node": ">=14",
-    "npm": ">=6"
+    "node": ">= 14.x.x",
+    "npm": ">= 6.x.x"
   },
   "dependencies": {
-    "caniuse-lite": "^1.0.30001367",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
+    "class-validator": "^0.14.0",
     "class-validators": "^1.0.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
-    "helmet": "^5.1.0",
+    "helmet": "^6.0.1",
     "hpp": "^0.2.3",
     "http-status-codes": "^2.2.0",
-    "jsonrepair": "^2.2.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
-    "tsyringe": "^4.6.0",
+    "tsyringe": "^4.7.0",
     "typedi": "^0.10.0",
-    "typeorm": "^0.2.45",
+    "typeorm": "^0.2.24",
     "typeorm-typedi-extensions": "^0.4.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
     "@types/compression": "^1.7.2",
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
-    "@types/faker": "^5.5.9",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/faker": "^6.6.9",
     "@types/helmet": "^4.0.0",
     "@types/hpp": "^0.2.2",
     "@types/http-status-codes": "^1.2.0",
-    "@types/morgan": "^1.9.3",
-    "@types/node": "^18.0.0",
-    "@types/prettier": "^2.6.3",
-    "@types/rimraf": "^3.0.2",
-    "body-parser": "^1.20.0",
+    "@types/morgan": "^1.9.4",
+    "@types/node": "^18.15.11",
+    "@types/prettier": "^2.7.2",
+    "@types/rimraf": "^4.0.5",
+    "body-parser": "^1.20.2",
     "cross-env": "^7.0.3",
     "faker": "^5.5.3",
-    "nodemon": "^2.0.16",
-    "prettier": "^2.7.1",
+    "nodemon": "^2.0.22",
+    "prettier": "^2.8.7",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "ts-node": "^10.8.1",
-    "tsc-alias": "^1.6.3",
-    "tsconfig-paths": "^3.11.0",
-    "tslib": "^2.4.0",
-    "typeorm-seeding": "^1.6.1",
-    "typescript": "^4.7.3"
+    "rimraf": "^4.4.1",
+    "ts-node": "^10.9.1",
+    "tsc-alias": "^1.8.5",
+    "tsconfig-paths": "^4.2.0",
+    "tslib": "^2.5.0",
+    "typeorm-seeding": "^1.6.1    ",
+    "typescript": "^5.0.3"
   }
 }
